Case study spacing fix

--- a/sass/theme/blocks/modules/_case-study.scss
+++ b/sass/theme/blocks/modules/_case-study.scss
@@ -37,7 +37,6 @@
 		.wp-block-column {
 			display: flex;
 			flex-direction: column;
-			justify-content: space-between;
 		}
 	}	
 }
